# ChangeLog for www-apps/bugs-bug-genie
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/bugs-bug-genie/Attic/ChangeLog,v 1.12 2007/05/12 04:15:15 chtekk Exp $

  12 May 2007; Luca Longinotti <chtekk@gentoo.org>
  bugs-bug-genie-1.7.2.ebuild:
  Apache 1.X masking (fix ebuilds to not require apache-1*).

  02 Jan 2007; Renat Lumpau <rl03@gentoo.org> bugs-bug-genie-1.7.2.ebuild:
  Drop mysql dep wrt bug 159781.

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
  bugs-bug-genie-1.7.2.ebuild:
  dev-db/mysql => virtual/mysql

  14 Feb 2006; Renat Lumpau <rl03@gentoo.org>
  files/digest-bugs-bug-genie-1.7.2, Manifest:
  Fixed digest

*bugs-bug-genie-1.7.2 (06 Feb 2006)

  06 Feb 2006; Renat Lumpau <rl03@gentoo.org> -bugs-bug-genie-1.7.1.ebuild,
  +bugs-bug-genie-1.7.2.ebuild:
  Version bump

  21 Aug 2005; Renat Lumpau <rl03@gentoo.org> -bugs-bug-genie-1.5.ebuild,
  bugs-bug-genie-1.7.1.ebuild:
  Housekeeping

*bugs-bug-genie-1.7.1 (04 Jul 2005)

  04 Jul 2005; Renat Lumpau <rl03@gentoo.org> +bugs-bug-genie-1.7.1.ebuild:
  Version bump, closes #67083

  17 Feb 2005; Robin H. Johnson <robbat2@gentoo.org>
  bugs-bug-genie-1.5.ebuild:
  Bug #69831: Ensure unzip is in DEPEND.

  09 Jan 2005; Jason Wever <weeve@gentoo.org> bugs-bug-genie-1.5.ebuild:
  Added ~sparc keyword.

  02 Sep 2004; David Holm <dholm@gentoo.org> bugs-bug-genie-1.5.ebuild:
  Added to ~ppc.

  30 Aug 2004; Renat Lumpau <rl03@gentoo.org> bugs-bug-genie-1.5.ebuild:
  Fixed DEPEND/RDEPEND

*bugs-bug-genie-1.5 (30 Aug 2004)

  30 Aug 2004; Renat Lumpau <rl03@gentoo.org> +metadata.xml,
  +files/postinstall-en.txt, +bugs-bug-genie-1.5.ebuild:
  Initial ebuild (by swegener, minor cleanups). Closes #50319.
