@@ -1,20 +1,30 @@
-AUX postinstall-en.txt 113 RMD160 2af43dec694fe1f3a516d963775d7c66c84823a2 SHA1 a03a91a7ec1b25b9bb247b1b674b756d297b9acf SHA256 0108fc4055bda3ea64cd7a6c72c3ac7e5272ffb6e5f7be792b72fa0bb13fa449
-MD5 b7f5cb0f5d933404fcec3322eb4da94c files/postinstall-en.txt 113
-RMD160 2af43dec694fe1f3a516d963775d7c66c84823a2 files/postinstall-en.txt 113
-SHA256 0108fc4055bda3ea64cd7a6c72c3ac7e5272ffb6e5f7be792b72fa0bb13fa449 files/postinstall-en.txt 113
-DIST BUGS_1.7.2.zip 1107147 RMD160 aacb160fbabb39d15a21b2444c0bbaa107c66085 SHA1 cb1ad13bbe9869175ac3d449a5e1e626e14dbd1e SHA256 d326eb112f6dffcb7966443e77ccc96a243bc365df46b214fad45f537fe71b84
-EBUILD bugs-bug-genie-1.7.2.ebuild 967 RMD160 64ccf367dbcfd9359f2c6c147d4d1a0cff049cca SHA1 4315489d41a8f95ed3ef69e1d7ac35ba7a4876af SHA256 e900fd9106192d1db4a87529ebae56d418396e1514c3fafa16e24a46d8344c15
-MD5 6f73975858a03c58c1589db2b79dece7 bugs-bug-genie-1.7.2.ebuild 967
-RMD160 64ccf367dbcfd9359f2c6c147d4d1a0cff049cca bugs-bug-genie-1.7.2.ebuild 967
-SHA256 e900fd9106192d1db4a87529ebae56d418396e1514c3fafa16e24a46d8344c15 bugs-bug-genie-1.7.2.ebuild 967
-MISC ChangeLog 1747 RMD160 0cd104a2baba39e99033ee3714f69df00e12da47 SHA1 918facf9d5a691c2e7dc3a19381565d3382de6ff SHA256 f5bc2db672ca492443f78f304b76a323c6284690badae64cd25359618120aa39
-MD5 253e3a9e5d69bb84984302d97833ded4 ChangeLog 1747
-RMD160 0cd104a2baba39e99033ee3714f69df00e12da47 ChangeLog 1747
-SHA256 f5bc2db672ca492443f78f304b76a323c6284690badae64cd25359618120aa39 ChangeLog 1747
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX postinstall-en.txt 243 RMD160 ec33b0d447f9a23b177a15ee3ec3d54cc9db7726 SHA1 00c2d1e9b697a038e2ec2d478c8049aa863200ff SHA256 8093f096e8f5cd4044a9fc76029b7f8e4c82e6c061afdeec2a8d2e5866de4646
+MD5 4696a6155e7cadd067a080af80e3e26a files/postinstall-en.txt 243
+RMD160 ec33b0d447f9a23b177a15ee3ec3d54cc9db7726 files/postinstall-en.txt 243
+SHA256 8093f096e8f5cd4044a9fc76029b7f8e4c82e6c061afdeec2a8d2e5866de4646 files/postinstall-en.txt 243
+DIST BUGS_1.8.zip 1013829 RMD160 0de6deb5216cad82779fbb5a0850e4c4850d62c8 SHA1 3a635a9b3d4e2c1350e36ff94d1f0bd24cc08588 SHA256 7f52263e5abc8af2ffe97d4ff5c7762889149b299fbb56b14b5f3d4dd44e26ab
+EBUILD bugs-bug-genie-1.8.ebuild 902 RMD160 28244cd4f442ea471a5bfe085a116242c02b3a2d SHA1 fe3d17864d6969eaf7fc9fda0e5156d3e740ce6b SHA256 ace8f0d9736141d937c348a27fcf26ec517082b3c356b8a241c65d9e833b650a
+MD5 0548a0d4b7fe8521f684f26679a267bc bugs-bug-genie-1.8.ebuild 902
+RMD160 28244cd4f442ea471a5bfe085a116242c02b3a2d bugs-bug-genie-1.8.ebuild 902
+SHA256 ace8f0d9736141d937c348a27fcf26ec517082b3c356b8a241c65d9e833b650a bugs-bug-genie-1.8.ebuild 902
+MISC ChangeLog 1928 RMD160 35f7ba7de2322328a691384f8bdde6364e701cba SHA1 ff023f058d7d4e38715dd54eeb3ea74d17296c3f SHA256 db623cdbcbd89b70f4b996f892e388231b8b913527dff4398611c0374b929efd
+MD5 3a4e1f19946431cd430c2c552c086379 ChangeLog 1928
+RMD160 35f7ba7de2322328a691384f8bdde6364e701cba ChangeLog 1928
+SHA256 db623cdbcbd89b70f4b996f892e388231b8b913527dff4398611c0374b929efd ChangeLog 1928
 MISC metadata.xml 161 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b SHA1 5b91a6d8d06d3dca2d774425befba30caca51507 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4
 MD5 f61bfa064e3acdfcd826e4a38b121196 metadata.xml 161
 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b metadata.xml 161
 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 metadata.xml 161
-MD5 d9dda13396fb9831f68fdddd87e2858c files/digest-bugs-bug-genie-1.7.2 226
-RMD160 5e1a44e4db478ddbba4ee91ea6554c9621094b84 files/digest-bugs-bug-genie-1.7.2 226
-SHA256 5f3d42cd3d1fe1cd0cc5925f7421f9e6fb8d5e7560f29def0fdb9754aac1a251 files/digest-bugs-bug-genie-1.7.2 226
+MD5 1f43406ad055f621e49daf9e97bf6f64 files/digest-bugs-bug-genie-1.8 220
+RMD160 e742880e5021c749a3679ce7cc9e4110e5e706aa files/digest-bugs-bug-genie-1.8 220
+SHA256 15d8c7084c4b51300db2253f0b74db0469dd750aac71abad3f381caf6d70b2c0 files/digest-bugs-bug-genie-1.8 220
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFGYQAUEzitwsaoONoRAhTdAKDRcudlp7HPjnJUw2msKgIBhBsi8QCgsGTU
+pRBvcU7pYst5PPcBp0Y2CmU=
+=S7IG
+-----END PGP SIGNATURE-----
