@@ -1,23 +1,24 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/bugs-bug-genie/Attic/bugs-bug-genie-1.7.2.ebuild,v 1.4 2007/05/12 04:15:15 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/bugs-bug-genie/Attic/bugs-bug-genie-1.8.ebuild,v 1.1 2007/06/02 05:28:44 rl03 Exp $
 
-inherit webapp
-S=${WORKDIR}/bugs_${PV}
+inherit webapp depend.php
+
+S=${WORKDIR}/BUGS_${PV}_RELEASE
 
 IUSE=""
 
 DESCRIPTION="BUGS - The Bug Genie"
-HOMEPAGE="http://bugs-bug-genie.sourceforge.net/"
+HOMEPAGE="http://www.thebuggenie.com/"
 SRC_URI="mirror://sourceforge/${PN}/BUGS_${PV}.zip"
 
 KEYWORDS="~x86 ~ppc ~sparc"
 
 DEPEND="app-arch/unzip"
-RDEPEND=">=net-www/apache-2.0
-		virtual/php"
 
 LICENSE="MPL-1.1"
+
+need_php
 
 src_install() {
 	webapp_src_preinst
@@ -25,8 +26,7 @@ src_install() {
 
 	cp -R LICENSE.TXT [[:lower:]][[:lower:]]* ${D}/${MY_HTDOCSDIR}
 
-	local files="include/userbase_connect.inc.php files include lang smileys
-		themes"
+	local files="files include lang smileys themes"
 	for a in files; do
 		webapp_serverowned ${MY_HTDOCSDIR}/${a}
 	done
