@@ -1,3 +1,0 @@
-MD5 6dbf6fba065a019a2667543e621e8ee5 BUGS_1.7.2.zip 1107147
-RMD160 aacb160fbabb39d15a21b2444c0bbaa107c66085 BUGS_1.7.2.zip 1107147
-SHA256 d326eb112f6dffcb7966443e77ccc96a243bc365df46b214fad45f537fe71b84 BUGS_1.7.2.zip 1107147
