@@ -1,0 +1,3 @@
+MD5 d50bc1131b05fd46f749357467763ef4 BUGS_1.8.zip 1013829
+RMD160 0de6deb5216cad82779fbb5a0850e4c4850d62c8 BUGS_1.8.zip 1013829
+SHA256 7f52263e5abc8af2ffe97d4ff5c7762889149b299fbb56b14b5f3d4dd44e26ab BUGS_1.8.zip 1013829
